added DETECTNRECORD config parameter

--- a/sd/test/yi-hack.cfg
+++ b/sd/test/yi-hack.cfg
@@ -37,6 +37,10 @@ TIMEZONE=CET-1CEST,M3.5.0,M10.5.0/3
 #If you want to change your ntp server you can see a list here http://www.pool.ntp.org/zone/@
 NTP_SERVER=0.it.pool.ntp.org
 
+### Motion detection and recording (default is disabled)
+# Values: yes|no
+DETECTNRECORD=no
+
 ### Debug
 # Debug mode, keep it to 'no' unless you known what you do
 # Values : yes|no
